add map direction

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>We use Blockchain technology to solve your delivery issues!</p>
+<footer>
+    <p>We use Blockchain technology to solve your delivery issues!</p>
+</footer>
