--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,92 +1,110 @@
 @import 'src/sass/variables';
 
 #main-container {
-    padding: 16px;
+    padding: $globalPadding;
+    // max-width: 100vw;
     z-index: 1;
-    position: absolute;
+    // position: absolute;
+    min-height: calc(100vh - #{$navbarHeight} - #{$footerHeight} - (#{$globalPadding} * 2));
+    // overflow: hidden;
+    // max-height: calc(100vh - #{$navbarHeight});
 }
 
-.circle {
-    position: absolute;
-    border-radius: 50%;
-    background: white;
-    animation: ripple 15s infinite;
-    box-shadow: 0px 0px 1px 0px #508fb9;
-}
+// .ripple-background {
+//     width: 100%;
+//     height: calc(100% - #{$navbarHeight});
+//     // position: absolute;
+//     overflow: hidden;
+// }
 
-.small{
-    width: 200px;
-    height: 200px;
-    left: -100px;
-    bottom: -100px;
-}
+// .small {
+//     width: 200px;
+//     height: 200px;
+//     left: -100px;
+//     bottom: -100px;
+// }
 
-.medium{
-    width: 400px;
-    height: 400px;
-    left: -200px;
-    bottom: -200px;
-}
+// .medium { 
+//     width: 400px;
+//     height: 400px;
+//     left: -200px;
+//     bottom: -200px;
+// }
 
-.large{
-    width: 600px;
-    height: 600px;
-    left: -300px;
-    bottom: -300px;
-}
+// .large {
+//     width: 600px;
+//     height: 600px;
+//     left: -300px;
+//     bottom: -300px;
+// }
 
-.xlarge{
-    width: 800px;
-    height: 800px;
-    left: -400px;
-    bottom: -400px;
-}
+// .xlarge {
+//     width: 800px;
+//     height: 800px;
+//     left: -400px;
+//     bottom: -400px;
+// }
 
-.xxlarge{
-    width: 1000px;
-    height: 1000px;
-    left: -500px;
-    bottom: -500px;
-}
+// .xxlarge {
+//     width: 1000px;
+//     height: 1000px;
+//     left: -500px;
+//     bottom: -500px;
+// }
 
-.shade1{
-    opacity: 0.2;
-}
+// .circle {
+//     position: absolute;
+//     border-radius: 50%;
+//     background: white;
+//     animation: ripple 15s infinite;
+//     box-shadow: 0px 0px 1px 0px #508fb9;
+//     // max-width: 100vw;
+//     // max-height: 100vh;
+// }
 
-.shade2{
-    opacity: 0.5;
-}
+// .shade1 {
+//     opacity: 0.2;
+// }
 
-.shade3{
-    opacity: 0.7;
-}
+// .shade2 {
+//     opacity: 0.5;
+// }
 
-.shade4{
-    opacity: 0.8;
-}
+// .shade3 {
+//     opacity: 0.7;
+// }
 
-.shade5{
-    opacity: 0.9;
-}
+// .shade4 {
+//     opacity: 0.8;
+// }
 
-@keyframes ripple{
-    0%{
-        transform: scale(0.8);
+// .shade5 {
+//     opacity: 0.9;
+// }
+
+// @keyframes ripple {
+//     0% {
+//         transform: scale(0.8);
+//     }
+
+//     50%{
+//         transform: scale(1.2);
+//     }
+
+//     100%{
+//         transform: scale(0.8);
+//     }
+// }
+
+// app-footer {
+//     // position: absolute;
+//     // top: 100%;
+//     width: 100%;
+//     text-align: center;
+// }
+
+@media screen and (max-width: $smallDeviceBreakpoint) {
+    #main-container {
+      padding: 25px 0px;
     }
-
-    50%{
-        transform: scale(1.2);
-    }
-
-    100%{
-        transform: scale(0.8);
-    }
 }
-
-app-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-}
-  
