--- a/src/app/components/home/delivery-creation/delivery-creation.component.scss
+++ b/src/app/components/home/delivery-creation/delivery-creation.component.scss
@@ -15,6 +15,11 @@ mat-form-field {
     padding: 10px;
 }
 
+.map-container {
+    position: relative;
+    height: 250px;
+}
+
 .create-btn {
     float: right;
 }
