--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,6 +3,7 @@
         <app-delivery-list></app-delivery-list>
     </div>
     <div class="flex-container-item">
-        <app-delivery-creation></app-delivery-creation>
+        <app-map></app-map>
     </div>
 </div>
+<app-delivery-creation></app-delivery-creation>
