--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <h1>Decentralized Delivery App!</h1>
+    <h1>Decentralized Delivery App! :)</h1>
     <div class="flex-item">
         <div class="nav-item flex-item"><span id="green-point"></span> {{ currentNetwork | titlecase }}</div>
         <div class="nav-item">{{ currentAccount?.address | titlecase }}</div>
