--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,16 +3,18 @@
 #flex-container {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .flex-container-item {
     width: 49%;
+    position: relative;
+    min-height: calc(100vh - #{$navbarHeight} - #{$footerHeight} - (#{$globalPadding} * 2));
 }
 
 @media screen and (max-width: $smallDeviceBreakpoint) {
     #flex-container {
         flex-direction: column;
-        // display: block;
     };
     .flex-container-item {
         width: 100%;
