--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,1 @@
-<div id="flex-container">
-    <div class="flex-container-item">
-        <app-delivery-list></app-delivery-list>
-    </div>
-    <div class="flex-container-item">
-        <app-map></app-map>
-    </div>
-</div>
-<app-delivery-creation></app-delivery-creation>
+<h1>MEGA APP DE LA MORT QUI TUE! :)))</h1>
