--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,9 @@
 <nav>
-    <h1>Decentralized Delivery App! :)</h1>
+    <a routerLink="./">
+        <h1>Decentralized Delivery App! :)</h1>
+    </a>
+    <a routerLink="./client">Find a courier</a>
+    <a routerLink="./courier">Earn money</a>
     <div class="flex-item">
         <div class="nav-item flex-item"><span id="green-point"></span> {{ currentNetwork | titlecase }}</div>
         <div class="nav-item">{{ currentAccount?.address | titlecase }}</div>
