--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -12,6 +12,9 @@ nav {
     // width: 100vw;
     box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
     color: #fff;
+    a {
+        color: white;
+    }
     .nav-item {
         margin-left: 15px;
     }
