--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<mat-spinner *ngIf="!isWeb3Ready$ | async"></mat-spinner>
+<!-- <mat-spinner></mat-spinner> -->
 <!-- <div *ngIf="isWeb3Ready$ | async" class='ripple-background'> -->
   <!-- <div class='circle xxlarge shade1'></div>
   <div class='circle xlarge shade2'></div>
@@ -7,7 +7,7 @@
   <div class='circle mediun shade4'></div>
   <div class='circle small shade5'></div> -->
 <div id="main-container">
-  <router-outlet *ngIf="isWeb3Ready$ | async"></router-outlet>
+  <router-outlet></router-outlet>
 </div>
 <!-- </div> -->
 <app-footer></app-footer>
