--- a/src/app/modules/courier/components/courier/courier.component.html
+++ b/src/app/modules/courier/components/courier/courier.component.html
@@ -1,6 +1,8 @@
 <div id="flex-container">
     <div class="flex-container-item">
-        <app-delivery-list></app-delivery-list>
+        <app-delivery-list *ngIf="isWeb3Initialized$ | async"></app-delivery-list>
+        <div *ngIf="!(isWeb3Initialized$ | async)">LINK WALLET PLEASE!</div>
+        <button (click)="onLinkWallet()">LINK</button>
     </div>
     <div class="flex-container-item">
         <app-map></app-map>
