add metamask connection

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,9 @@ $extraLightOpacityBlue: rgba(63, 81, 181, 0.15);
 
 $red: #ff291e;
 $green: #16e941;
+$orange-metamask: #E2761B;
+$orange-metamask-lighter: #F6851B; 
+$orange-metamask-darker: #CD6116;
 
 // SIZES
 $navbarHeight: 56px;
