--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
 $blue: #3f51b5;
-$mediumOpacityBlue: rgba(63, 81, 181, 0.85);
-$lightOpacityBlue: rgba(63, 81, 181, 0.3);
-$extraLightOpacityBlue: rgba(63, 81, 181, 0.15);
+$mediumOpacityBlue: #3f51b5d9;
+$lightOpacityBlue: #3f51b54d;
+$extraLightOpacityBlue: #3f51b526;
 
 $red: #ff291e;
 $green: #16e941;
